--- a/markup/css/style.css
+++ b/markup/css/style.css
@@ -28,19 +28,24 @@ main {
 
 @keyframes opacity {
   0%,
-  100% {
-    opacity: 1;
-  }
+ 100% {
+   transform: translateX(0);
+ }
 
-  20%,
-  60%{
-    opacity: 0.8;
-  }
+ 10%,
+ 30%,
+ 50%,
+ 70%,
+ 90% {
+   transform: translateX(-5px);
+ }
 
-  40%,
-  80% {
-    opacity: 0.6;
-  }
+ 20%,
+ 40%,
+ 60%,
+ 80% {
+   transform: translateX(5px);
+ }
 }
 
 .page-body {
@@ -947,7 +952,3 @@ main {
 
 .statistics__item:not(:last-child) {
   margin-bottom: 78px; }
-
-.shake {
-  animation: opacity 3s;
-}
